made margin constant to avoid overflow issues

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -93,7 +93,7 @@ section {
     width: 80%;
     min-width: 280px;
     margin: auto;
-    margin-top: 28%;
+    margin-top: 30px;
 }
 .down-arrow i {
    color: #fff;
